--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-pandas
-textwrap
-shutil
-tkinter
+# Minimum Python version required
+python>=3.7
+
+# Python packages and their minimum required versions
+pandas>=1.0
+textwrap>=0.9
+shutil>=1.0
+tkinter>=8.6
+ttk>=0.3
+
